# ccdb

./: .gitignore  .travis.yaml  .travis.yml  CHANGE_LOG  CMakeLists.txt  README.md  SConstruct  apply-clas12-patch  clas12.diff  environment.bash  environment.csh  find_ccdb_usages.py  install.linux.md  install.linux.txt  install.windows.txt  release_notes_ccdb_1.00.txt
clas12/: calibration.ec.efficiency.init.txt  calibration.ftof.efficiency.init.txt  calibration.ftof.pedestals.sectorN.init.txt  ccdb_commands.txt  geometry.dc.dc.txt  geometry.dc.layer.init.txt  geometry.dc.region.init.txt  geometry.dc.superlayer.init.txt  geometry.drift_chamber.region_parms.init.txt  geometry.drift_chamber.superlayer_parms.init.txt
cpp/: .gitignore  CMakeLists.txt  README.md
cpp/cmake/: FindMySQL.cmake
cpp/cmake/Modules/: FindMySQL.cmake
cpp/examples/: SConscript  assignments.cc  requests.cc
cpp/jana_plugin/: JCalibrationCCDB.h  JCalibrationGeneratorCCDB.h  Makefile  README.txt  janaccdb.cc
cpp/src/Benchmarks/: benchmark_PreparedStatements.cc  benchmark_SqliteMultiprocess.cc
cpp/src/CCDB/: CCDBError.cc  CCDBError.h  CMakeLists.txt  Calibration.cc  Calibration.h  CalibrationGenerator.cc  CalibrationGenerator.h  Console.cc  Console.h  GlobalMutex.h  Globals.h  IMutex.h  ISyncObject.h  Log.cc  Log.h  MySQLCalibration.cc  MySQLCalibration.h  PthreadMutex.cc  PthreadMutex.h  PthreadSyncObject.cc  SConscript  SQLiteCalibration.cc  SQLiteCalibration.h
cpp/src/CCDB/Helpers/: PathUtils.cc  PathUtils.h  PerfLog.h  SQLite.h  StringUtils.cc  StringUtils.h  TimeProvider.cc  TimeProvider.h  Varargs.h  WorkUtils.cc  WorkUtils.h
cpp/src/CCDB/Model/: Assignment.cc  Assignment.h  ConstantsTypeColumn.cc  ConstantsTypeColumn.h  ConstantsTypeTable.cc  ConstantsTypeTable.h  Directory.cc  Directory.h  EventRange.h  ObjectsOwner.cc  RunRange.cc  RunRange.h  StoredObject.cc  StoredObject.h  Variation.cc  Variation.h
cpp/src/CCDB/Providers/: DataProvider.cc  DataProvider.h  EnvironmentAuthentication.h  FileDataProvider.cc  FileDataProvider.h  IAuthentication.h  MySQLConnectionInfo.h  MySQLDataProvider.cc  MySQLDataProvider.h  MySQLMiscDataProvider.cpp  SQLiteDataProvider.cc  SQLiteDataProvider.h
cpp/src/Tests/: CMakeLists.txt  SConscript  catch.cc  test_Authentication.cc  test_ModelObjects.cc  test_MySQLProvider.cc  test_MySQLProvider_Assignments.cc  test_MySQLProvider_Connection.cc  test_MySqlUserAPI.cc  test_NoMySqlUserAPI.cc  test_PathUtils.cc  test_SQLiteProvider.cc  test_SQLiteProvider_Assignments.cc  test_SQLiteProvider_Connection.cc  test_SQLiteProvider_Directories.cc  test_SQLiteProvider_TypeTables.cc  test_SQLiteProvider_Variations.cc  test_StringUtils.cc  tests.cc  tests.h
cpp/src/benchmarks/: CMakeLists.txt  SConscript  benchmark_Providers.cc  benchmark_String.cc  benchmark_UserAPI.cc  benchmarks.cc  benchmarks.h
cpp/src/fmt/: CMakeLists.txt
cpp/src/tests/: CMakeLists.txt  catch.hpp  test_Console.cc  test_MySQLProvider.cc  test_MySQLProvider_Assignments.cc  test_MySQLProvider_Connection.cc  test_MySQLProvider_Directories.cc  test_MySQLProvider_RunRanges.cc  test_MySQLProvider_TypeTables.cc  test_MySQLProvider_Variations.cc  test_MySqlUserAPI.cc  test_NoMySqlUserAPI.cc  test_PathUtils.cc  test_SQLiteProvider_Assignments.cc  test_SQLiteProvider_Connection.cc  test_SQLiteProvider_Directories.cc  test_SQLiteProvider_RunRanges.cc  test_SQLiteProvider_TypeTables.cc  test_SQLiteProvider_Variations.cc  test_TimeProvider.cc  tests.cc  tests.h
doc/: ccdb_design_paralellism_01_07_2011.pptx  ccdb_design_romanovda.pptx  ccdb_design_romanovda_10_06_2011.pptx  ccdb_profile_optimization.pptx  mysql_to_sqlite.md
examples/: SConscript  file.txt  helpers.cc  llapi_readout.py  python_readout.py  simple.cc  simple.cpp
include/: DCCDBError.h  DCCDBGlobals.h  DObjectsOwner.h  DPathUtils.h  DVarargs.h  winpthreads.h
jana/: JCalibrationCCDB.cc  JCalibrationCCDB.h  JCalibrationGeneratorCCDB.h  README.txt  jana_ccdb.cc
janaccdb/: JCalibrationCCDB.h  JCalibrationGeneratorCCDB.h  Makefile  README.txt  janaccdb.cc
java/: .gitignore
mysql/: ccdb.mysql.sql  ccdb.sqlite  ccdb_eer_diagram.mwb  (+3 more)
projects/CLion/: CMakeLists.txt
src/: CMakeLists.txt  CalibrationGenerator.cc  CccdbError.cc  Console.cc  DCCDBError.cc  DPathUtils.cc  DStoredObject.cc  ObjectsOwner.cc  PathUtils.cc  SConscript  mainWeb.cc  test.cc
src/Benchmarks/: CMakeLists.txt  SConscript  benchmark_PreparedStatements.cc  benchmark_Providers.cc  benchmark_SqliteMultiprocess.cc  benchmark_UserAPI.cc  benchmarks.cc
src/Model/: DConstantsTypeColumn.cc  DConstantsTypeTable.cc  Directory.cc  RunRange.cc  Variation.cc
src/Providers/: DDataProvider.cc  DEnvironmentAuthentication.cc  DFileDataProvider.cc  DMySQLConnectionInfo.cc  DMySQLDataProvider.cc
src/SQLite/: CMakeLists.txt  SConscript
src/Tests/: CMakeLists.txt  SConscript  benchmark_PreparedStatements.cc  benchmark_Providers.cc  catch.cc  catch2.cc  mainTests.cc  test_Authentication.cc  test_Console.cc  test_DConsole.cc  test_DMySQLProvider_Assignments.cc  test_DMySQLProvider_Directories.cc  test_DMySQLProvider_RunRanges.cc  test_DMySQLProvider_RunRangesVariations.cc  test_DMySQLProvider_TypeTables.cc  test_DMySQLProvider_Variations.cc  test_DPathUtils.cc  test_DStringUtils.cc  test_ModelObjects.cc  test_MySQLProvider.cc  test_MySQLProvider_Assignments.cc  test_MySQLProvider_Connection.cc  test_MySQLProvider_Directories.cc  test_MySQLProvider_RunRanges.cc  test_MySQLProvider_RunRangesVariations.cc  test_MySQLProvider_TypeTables.cc  test_MySQLProvider_Variations.cc  test_MySqlUserAPI.cc  test_NoMySqlUserAPI.cc  test_NoMysqlUserAPI.cc  test_PathUtils.cc  test_SQLiteProvider.cc  test_SQLiteProvider_Assignments.cc  test_SQLiteProvider_Connection.cc  test_SQLiteProvider_Directories.cc  test_SQLiteProvider_RunRanges.cc  test_SQLiteProvider_TypeTables.cc  test_SQLiteProvider_Variations.cc  test_StringUtils.cc  test_TimeProvider.cc  (+2 more)
src/UserAPI/: DCCDBGlobalMutex.cc  DCalibration.cc  DMySQLCalibration.cc
src/Web/: ConfigReader.cc  DHttpContext.cc  HttpContext.cc  SConscript  mainWeb.cc
(+485 files in other folders)
